updated some modules Fixed the fracking submit buttons being .1em too big.  Should have all the forms looking better now.  Also tweeked the soemthing some how.

--- a/sites/all/themes/lapcat/less/compiled.css
+++ b/sites/all/themes/lapcat/less/compiled.css
@@ -25,7 +25,7 @@ button,a.button,.button,.selectButton{cursor:pointer;padding:3px;white-space:now
 .roundBottom3{border-bottom-left-radius:3px;border-bottom-right-radius:3px;-webkit-border-bottom-left-radius:3px;-webkit-border-bottom-right-radius:3px;}
 .roundBottomLeft3{border-bottom-left-radius:3px;-webkit-border-bottom-left-radius:3px;}
 .roundLeft3{border-bottom-left-radius:3px;border-top-left-radius:3px;-webkit-border-bottom-left-radius:3px;-webkit-border-top-left-radius:3px;}
-.roundRight3{-webkit-border-bottom-right-radius:3px;-webkit-border-top-right-radius:3px;}
+.roundRight3{-webkit-border-bottom-right-radius:3px;-webkit-border-top-right-radius:3px;border-bottom-right-radius:3px;border-top-right-radius:3px;}
 .roundBottomRight3{border-bottom-right-radius:3px;-webkit-border-bottom-right-radius:3px;}
 .roundTop3{border-top-left-radius:3px;border-top-right-radius:3px;-webkit-border-top-left-radius:3px;-webkit-border-top-right-radius:3px;}
 .corners-top-left-3{border-top-left-radius:4px;-webkit-border-top-left-radius:4px;}
@@ -35,7 +35,7 @@ a,a:hover,a:visited,a:focus{color:#5f3e12;text-decoration:none;font-weight:norma
 h1,h2,h3,h4{margin:2px;color:#5f3e12;text-align:left;font-family:sans-serif;}
 h1{font-size:2.5em;font-weight:bold;color:#1d1d1d;}
 h2{font-size:2.2em;color:#1d1d1d;}
-.adgendaLink{font-size:1.1em;}
+.adgendaLink,.linkIcon{font-size:1.2em;margin-bottom:.1em;}
 h3{font-size:2em;}
 h4{font-size:1.8em;}
 .insideBoxShadow{-webkit-box-shadow:inset 0 0 1px 1px rgba(36, 36, 36, 0.3);box-shadow:inset 0 0 1px 1px rgba(36, 36, 36, 0.3);}
@@ -73,9 +73,9 @@ li{list-style:none outside none;}
 .helpLink{font-size:1.3em;}
 .views-slideshow-cycle-main-frame-row *{border-radius:3px;-webkit-border-radius:3px;display:relative;}
 .mainCatalogSearch{position:absolute;top:2px;right:2px;z-index:10;}
-form *{border:none;font-size:1em;position:relative;margin:0 .05em;}
+form *{border:none;font-size:1em;position:relative;margin:0;}
+input,select{color:#1d1d1d;height:1.5em;background:rgba(255, 255, 255, 0.3);border-radius:3px;-webkit-border-radius:3px;border:1px solid #aaaaaa;}
 form #user-login-form{margin:1em;}
-input[type="submit"]{font-size:1em;height:1.6em;}
 .mainCatalogSearch input[type="submit"],.mainCatalogSearch select{opacity:.85;}
 .mainCatalogSearch:hover input,.mainCatalogSearch:hover select{opacity:.95;}
 .sliderInfoBox{position:absolute;bottom:0;left:0;background:rgba(29, 29, 29, 0.4);overflow:hidden;color:#f1f1f1;width:100%;max-height:7em;}.sliderInfoBox a{color:#f1f1f1;}
@@ -104,7 +104,7 @@ input[type="submit"]{font-size:1em;height:1.6em;}
 .secondNav{font-weight:bold;font-size:1.2em;position:relative;height:1.4em;}
 .siteMap .secondNav{background:#e7f2e6;height:20px;}
 .logoTree{max-height:75px;max-width:68px;}
-.subPageHeader{font-size:50px;height:120px;padding:3px 3px 3px 10px;margin:0 5px 10px 5px;background:url('/sites/all/themes/lapcat/images/LaPorte_County_Public_Library.jpg') no-repeat;background-size:cover;background-position:0px;}.subPageHeader div{display:table-cell;vertical-align:middle;white-space:nowrap;height:90px;width:100%;}
+.subPageHeader{font-size:50px;height:115px;padding:3px 3px 3px 10px;margin:0 5px 10px 5px;background:url('/sites/all/themes/lapcat/images/LaPorte_County_Public_Library.jpg') no-repeat;background-size:cover;background-position:0px;}.subPageHeader div{display:table-cell;vertical-align:middle;white-space:nowrap;height:90px;width:100%;}
 .subPageHeader.Hours{background:url('http://maps.googleapis.com/maps/api/staticmap?center=41.609126,-86.721036&zoom=10&size=560x85&scale=2&sensor=false') no-repeat;}
 .subPageHeader.Downloads{background:url('/sites/all/themes/lapcat/images/downloadHeader.png') no-repeat;}
 .subPageCatalogSearch{position:absolute;right:5px;top:0;opacity:1;z-index:10;background:#E0E0E0;padding:3px;border-top-right-radius:3px;border-bottom-left-radius:3px;}
@@ -157,5 +157,5 @@ footer .footerLeft{width:80%;float:left;}
 footer .footerRight{width:20%;float:right;}
 footer #search-block-form{-webkit-box-shadow:inset 0 0 1px 1px rgba(36, 36, 36, 0.3);box-shadow:inset 0 0 1px 1px rgba(36, 36, 36, 0.3);background:rgba(0, 0, 0, 0.3);margin:5px;margin-bottom:10px;padding:.3em;width:14em;border-radius:3px;-webkit-border-radius:3px;}footer #search-block-form .form-actions{float:right;}
 footer #search-block-form .form-text{width:10em;}
-footer #search-block-form input{color:#1d1d1d;height:1.5em;background:rgba(255, 255, 255, 0.3);border-radius:3px;-webkit-border-radius:3px;}
+footer #search-block-form input{color:#1d1d1d;height:1.5em;background:rgba(255, 255, 255, 0.3);border-radius:3px;-webkit-border-radius:3px;border:none;}
 #pageLinks li{font-size:1.3em;padding:3px;}#pageLinks li a{color:rgba(241, 241, 241, 0.6);}
