--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -27,8 +27,9 @@ h2 {
   font-size: 2.2em;
   color: @colorDark;
 }
-.adgendaLink{
-  font-size:1.1em;
+.adgendaLink,.linkIcon{
+  font-size:1.2em;
+  margin-bottom:.1em;
 }
   
 h3 {
@@ -216,23 +217,25 @@ form *{
   border:           none;
   font-size:        1em;
   position:         relative;
-  margin:           0 .05em; 
+  margin:           0;
+}
+input,select{
+  color:@colorDark;
+  height:1.5em;
+  background: rgba(255, 255, 255, 0.3);
+  .rounded-corners(3px);
+  border:1px solid @buttonBorder;
 }
 form #user-login-form{
   margin:1em;
 }
-input[type="submit"]{
-  font-size:1em;
-  height:1.6em;
-}
-
 .mainCatalogSearch input[type="submit"],.mainCatalogSearch select{
   opacity:          .85;
 }
 
 .mainCatalogSearch:hover input,.mainCatalogSearch:hover select{
   opacity:          .95;
-}
+} 
 .sliderInfoBox{
   position:absolute;
   bottom:0;
@@ -414,7 +417,7 @@ input[type="submit"]{
 }
 .subPageHeader{
 	font-size:50px;
-	height:120px;
+	height:115px;
 	padding:3px 3px 3px 10px;
 	margin:0 5px 10px 5px;
   background: url('/sites/all/themes/lapcat/images/LaPorte_County_Public_Library.jpg') no-repeat;
@@ -731,10 +734,11 @@ footer {
   }
   .rounded-corners(3px);
   input{
-    color:@colorDark;    
+    color:@colorDark;
     height:1.5em;
     background: rgba(255, 255, 255, 0.3);
     .rounded-corners(3px);
+    border:none;
   }
  } 
 }
