--- a/sites/all/themes/lapcat/less/roundCorners.less
+++ b/sites/all/themes/lapcat/less/roundCorners.less
@@ -31,6 +31,8 @@ border-top-left-radius:3px;
 .roundRight3 {
 -webkit-border-bottom-right-radius:3px;
 -webkit-border-top-right-radius:3px;
+border-bottom-right-radius:3px;
+border-top-right-radius:3px;
 }
 
 .roundBottomRight3 {
